fix(api): onlyWithConvention -> convention + update front demo
